fixed about me img alignment and size

--- a/src/sidebar/sidebar.css
+++ b/src/sidebar/sidebar.css
@@ -1,3 +1,39 @@
 .sidebar{
     flex: 3;
+    margin: 20px;
+    padding-bottom: 30px;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #fdfbfb;
+}
+
+.sidebarItem{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.sidebarTitle {
+    margin: 10px;
+    padding: 5px;
+    width: 80%;
+    border-top: 1px solid;
+    border-bottom: 1px solid;
+    font-family: 'Poppins', sans-serif;
+    font-size: 12px;
+    color: #444;
+    font-weight: 600;
+    line-height: 20px;
+    text-align: center;
+}
+
+.sidebarItem > img{
+    margin-top: 15px;
+    width: 100%;
+}
+
+.sidebarItem > p{
+    padding: 30px;
 }
